--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
 </head>
 <body>
     <nav>
-        
+        <div class="nav-links-section">
+            <a href="#" class="nav-link">Home</a>
+            <a href="#" class="nav-link">About</a>
+            <a href="#" class="nav-link">Join</a>
+            <a href="#" class="nav-link">Merch</a>
+        </div>
     </nav>
 </body>
 </html>
