Add intro section

--- a/index.html
+++ b/index.html
@@ -15,5 +15,8 @@
             <a href="#" class="nav-link">Merch</a>
         </div>
     </nav>
+    <section class="intro-section">
+
+    </section>
 </body>
 </html>
