Add header to intro section

--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
         </div>
     </nav>
     <section class="intro-section">
-
+        <header class="intro-header">
+            <h1 class="intro-heading">Vice X Club</h1>
+            <p class="intro-desc">A club for anyone</p>
+        </header>
     </section>
 </body>
 </html>
