--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             <h1 class="intro-heading">Vice X Club</h1>
             <p class="intro-desc">A club for anyone</p>
         </header>
+        <a href="#" class="join-link">Join</a>
     </section>
 </body>
 </html>
