Add mission section

--- a/index.html
+++ b/index.html
@@ -22,5 +22,8 @@
         </header>
         <a href="#" class="join-link">Join</a>
     </section>
+    <section class="mission-section">
+        
+    </section>
 </body>
 </html>
