Add mission header

--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
         <a href="#" class="join-link">Join</a>
     </section>
     <section class="mission-section">
-        
+        <header class="mission-header">
+            <h1 class="mission-heading">Our Mission:</h1>
+        </header>
     </section>
 </body>
 </html>
