--- a/index.html
+++ b/index.html
@@ -26,6 +26,13 @@
         <header class="mission-header">
             <h1 class="mission-heading">Our Mission:</h1>
         </header>
+        <p class="mission-desc">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor 
+            incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco 
+            laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate 
+            velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt 
+            in culpa qui officia deserunt mollit anim id est laborum.
+        </p>
     </section>
 </body>
 </html>
