--- a/index.html
+++ b/index.html
@@ -33,6 +33,18 @@
             velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt 
             in culpa qui officia deserunt mollit anim id est laborum.
         </p>
+        <p class="motto">
+            Who are we?<br>
+            Vice X Club!<br>
+            What do we wanna have?<br>
+            A good time!<br>
+            We're gonna have a good time...<br>
+            All the time!<br>
+            Because who are we?<br>
+            Vice X Club!<br>
+            What are we made of?<br>
+            Sugar, spice, and everything Vice!<br>
+        </p>
     </section>
 </body>
 </html>
