Add gallery section

--- a/index.html
+++ b/index.html
@@ -46,5 +46,8 @@
             Sugar, spice, and everything Vice!<br>
         </p>
     </section>
+    <section class="gallery-section">
+        
+    </section>
 </body>
 </html>
