--- a/index.html
+++ b/index.html
@@ -47,7 +47,9 @@
         </p>
     </section>
     <section class="gallery-section">
-        
+        <header class="gallery-header">
+            <h1 class="gallery-heading">Gallery</h1>
+        </header>
     </section>
 </body>
 </html>
