Make changes to motto

--- a/index.html
+++ b/index.html
@@ -34,15 +34,15 @@
             in culpa qui officia deserunt mollit anim id est laborum.
         </p>
         <p class="motto">
-            Who are we?<br>
-            Vice X Club!<br>
-            What do we wanna have?<br>
+            What night is it?<br>
+            Vice night!<br>
+            What are we gonna have?<br>
             A good time!<br>
             We're gonna have a good time...<br>
             All the time!<br>
             Because who are we?<br>
             Vice X Club!<br>
-            What are we made of?<br>
+            What are we full of?<br>
             Sugar, spice, and everything Vice!<br>
         </p>
     </section>
