--- a/index.html
+++ b/index.html
@@ -27,11 +27,9 @@
             <h1 class="mission-heading">Our Mission:</h1>
         </header>
         <p class="mission-desc">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor 
-            incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco 
-            laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate 
-            velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt 
-            in culpa qui officia deserunt mollit anim id est laborum.
+            At Vice X Club, our goal is to motivate, empower, and inspire others to be the best version of themselves. We do 
+            unpredictable things that we never thought we could do. We defy what is expected of us and do anything we can to
+            get out of our comfort zone. 
         </p>
         <p class="motto">
             What night is it?<br>
