--- a/join.html
+++ b/join.html
@@ -7,6 +7,8 @@
     <title>Join | Vice X Club</title>
 </head>
 <body>
-    
+    <section class="join-instructions">
+        
+    </section>
 </body>
 </html>
