--- a/join.html
+++ b/join.html
@@ -7,8 +7,8 @@
     <title>Join | Vice X Club</title>
 </head>
 <body>
-    <section class="join-instructions">
-        
+    <section class="join-instructions-section">
+
     </section>
 </body>
 </html>
