Add clothing section

--- a/index.html
+++ b/index.html
@@ -49,5 +49,8 @@
             <h1 class="gallery-heading">Gallery</h1>
         </header>
     </section>
+    <section class="clothing-section">
+        
+    </section>
 </body>
 </html>
