--- a/index.html
+++ b/index.html
@@ -50,7 +50,9 @@
         </header>
     </section>
     <section class="clothing-section">
-        
+        <header class="clothing-header">
+            <h1 class="clothing-heading">Clothing</h1>
+        </header>
     </section>
 </body>
 </html>
