Add join instructions

--- a/join.html
+++ b/join.html
@@ -8,7 +8,11 @@
 </head>
 <body>
     <section class="join-instructions-section">
-
+        <p class="join-instructions">
+            In order to join Vice X Club, send a PM (private message) to the following
+            Instagram account: 
+            <a href="https://instagram.com/vicexander?igshid=MTI1ZDU5ODQ3Yw==" class="join-instagram-link">vicexander</a>
+        </p>
     </section>
 </body>
 </html>
