Change href of "join" nav link

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div class="nav-links-section">
             <a href="#" class="nav-link">Home</a>
             <a href="#" class="nav-link">About</a>
-            <a href="#" class="nav-link">Join</a>
+            <a href="join.html" class="nav-link">Join</a>
             <a href="#" class="nav-link">Merch</a>
         </div>
     </nav>
