Add events section

--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
             Sugar, spice, and everything Vice!<br>
         </p>
     </section>
+    <section class="events-section">
+    </section>
     <section class="gallery-section">
         <header class="gallery-header">
             <h1 class="gallery-heading">Gallery</h1>
