Add events header

--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
         </p>
     </section>
     <section class="events-section">
+        <header class="events-header">
+            <h1 class="events-heading">Events</h1>
+        </header>
     </section>
     <section class="gallery-section">
         <header class="gallery-header">
