Add gallery description

--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
         <header class="gallery-header">
             <h1 class="gallery-heading">Gallery</h1>
         </header>
+        <p class="gallery-desc">Check out pictures taken from previous hangouts</p>
     </section>
 </body>
 </html>
