Update join instructions

--- a/join.html
+++ b/join.html
@@ -12,6 +12,10 @@
             In order to join Vice X Club, send a PM (private message) to the following
             Instagram account: 
             <a href="https://instagram.com/vicexander?igshid=MTI1ZDU5ODQ3Yw==" class="join-instagram-link">vicexander</a>
+            <br>
+            <br>
+            Members of Vice X Club will be invited to join a private Instagram group chat where you can talk with other
+            members and receive news about upcoming events.
         </p>
     </section>
 </body>
