--- a/events.html
+++ b/events.html
@@ -7,6 +7,9 @@
     <title>Events | Vice X Club</title>
 </head>
 <body>
+    <header class="info-header">
+        <h1 class="info-heading">Events</h1>
+    </header>
     <main>
         
     </main>
