Add an info paragraph

--- a/events.html
+++ b/events.html
@@ -11,7 +11,10 @@
         <h1 class="info-heading">Events</h1>
     </header>
     <main>
-        
+        <p class="info-paragraph">
+            Vice X Club holds many events throughout the year. All events are in-person and take place in the San Francisco
+            Bay Area. 
+        </p>
     </main>
 </body>
 </html>
