--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
             <a href="#" class="nav-link">Home</a>
             <a href="#" class="nav-link">About</a>
             <a href="join.html" class="nav-link">Join</a>
+            <a href="events.html">Events</a>
             <a href="#" class="nav-link">Merch</a>
         </div>
     </nav>
