Add page header

--- a/about.html
+++ b/about.html
@@ -6,6 +6,8 @@
     <title>About | Vice X Club</title>
 </head>
 <body>
-    
+    <header class="info-header">
+        <h1 class="info-heading">About</h1>
+    </header>
 </body>
 </html>
