Change "info-header" class to "page-header"

--- a/events.html
+++ b/events.html
@@ -7,7 +7,7 @@
     <title>Events | Vice X Club</title>
 </head>
 <body>
-    <header class="info-header">
+    <header class="page-header">
         <h1 class="info-heading">Events</h1>
     </header>
     <main>
