--- a/events.html
+++ b/events.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header class="page-header">
-        <h1 class="info-heading">Events</h1>
+        <h1 class="page-heading">Events</h1>
     </header>
     <main>
         <p class="info-paragraph">
