Change "info-paragraph" class to "page-paragraph"

--- a/events.html
+++ b/events.html
@@ -11,7 +11,7 @@
         <h1 class="page-heading">Events</h1>
     </header>
     <main>
-        <p class="info-paragraph">
+        <p class="page-paragraph">
             Vice X Club holds many events throughout the year. All events are in-person and take place in the San Francisco
             Bay Area. 
         </p>
