--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
     <title>About | Vice X Club</title>
 </head>
 <body>
-    <header class="info-header">
+    <header class="page-header">
         <h1 class="info-heading">About</h1>
     </header>
 </body>
