--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <header class="page-header">
-        <h1 class="info-heading">About</h1>
+        <h1 class="page-heading">About</h1>
     </header>
 </body>
 </html>
