Add main section

--- a/about.html
+++ b/about.html
@@ -9,5 +9,8 @@
     <header class="page-header">
         <h1 class="page-heading">About</h1>
     </header>
+    <main>
+        
+    </main>
 </body>
 </html>
