Add link to style.css

--- a/about.html
+++ b/about.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About | Vice X Club</title>
+    <link href="style.css" rel=stylesheet>
 </head>
 <body>
     <header class="page-header">
         <h1 class="page-heading">About</h1>
     </header>
     <main>
-        
+        <p class="page-paragraph">Welcome to Vice X Club! We are a San Francisco Bay Area based club</p>
     </main>
 </body>
 </html>
