Embed main navbar in header element

--- a/index.html
+++ b/index.html
@@ -8,15 +8,17 @@
     <link href="style.css" rel="stylesheet">
 </head>
 <body>
-    <nav>
-        <div class="nav-links-section">
-            <a href="#" class="nav-link">Home</a>
-            <a href="#" class="nav-link">About</a>
-            <a href="join.html" class="nav-link">Join</a>
-            <a href="events.html">Events</a>
-            <a href="#" class="nav-link">Merch</a>
-        </div>
-    </nav>
+    <header>
+        <nav>
+            <div class="nav-links-section">
+                <a href="#" class="nav-link">Home</a>
+                <a href="#" class="nav-link">About</a>
+                <a href="join.html" class="nav-link">Join</a>
+                <a href="events.html">Events</a>
+                <a href="#" class="nav-link">Merch</a>
+            </div>
+        </nav>
+    </header>
     <section class="intro-section">
         <header class="intro-header">
             <h1 class="intro-heading">Vice X Club</h1>
