Add home-section class to all section elements

--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
             <a href="#" class="nav-link">Merch</a>
         </nav>
     </header>
-    <section class="intro-section">
+    <section class="home-section intro-section">
         <header class="intro-header">
             <h1 class="intro-heading">Vice X Club</h1>
             <p class="intro-desc">A club for anyone</p>
         </header>
         <a href="#" class="join-link">Join</a>
     </section>
-    <section class="mission-section">
+    <section class="home-section mission-section">
         <header class="mission-header">
             <h1 class="mission-heading">Our Mission:</h1>
         </header>
@@ -46,12 +46,12 @@
             Sugar, spice, and everything Vice!<br>
         </p>
     </section>
-    <section class="events-section">
+    <section class="home-section events-section">
         <header class="events-header">
             <h1 class="events-heading">Events</h1>
         </header>
     </section>
-    <section class="gallery-section">
+    <section class="home-section gallery-section">
         <header class="gallery-header">
             <h1 class="gallery-heading">Gallery</h1>
         </header>
