--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
     </header>
     <section class="home-section intro-section">
         <header class="intro-header">
-            <h1 class="intro-heading">Vice X Club</h1>
+            <h1 class="home-heading intro-heading">Vice X Club</h1>
             <p class="intro-desc">A club for anyone</p>
         </header>
         <a href="#" class="join-link">Join</a>
     </section>
     <section class="home-section mission-section">
         <header class="mission-header">
-            <h1 class="mission-heading">Our Mission:</h1>
+            <h1 class="home-heading mission-heading">Our Mission:</h1>
         </header>
         <p class="mission-desc">
             At Vice X Club, our goal is to motivate, empower, and inspire others to be the best version of themselves. We do 
@@ -48,12 +48,12 @@
     </section>
     <section class="home-section events-section">
         <header class="events-header">
-            <h1 class="events-heading">Events</h1>
+            <h1 class="home-heading events-heading">Events</h1>
         </header>
     </section>
     <section class="home-section gallery-section">
         <header class="gallery-header">
-            <h1 class="gallery-heading">Gallery</h1>
+            <h1 class="home-heading gallery-heading">Gallery</h1>
         </header>
         <p class="gallery-desc">Check out pictures taken from previous hangouts</p>
     </section>
