--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <a href="#" class="nav-link">Home</a>
             <a href="#" class="nav-link">About</a>
             <a href="join.html" class="nav-link">Join</a>
-            <a href="events.html">Events</a>
+            <a href="events.html" class="nav-link">Events</a>
         </nav>
     </header>
     <section class="home-section intro-section">
