Change "main-nav-link" class to "main-navbar"

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <nav class="main-nav-links">
+        <nav class="main-navbar">
             <a href="#" class="nav-link">Home</a>
             <a href="#" class="nav-link">About</a>
             <a href="join.html" class="nav-link">Join</a>
