Replace home page nav link with paragraph
This tells the user that they are on the corresponding page

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <nav class="main-navbar">
-            <a href="#" class="nav-link">Home</a>
+            <p href="#" class="current-page-paragraph">Home</p>
             <a href="#" class="nav-link">About</a>
             <a href="join.html" class="nav-link">Join</a>
             <a href="events.html" class="nav-link">Events</a>
